# chess-data-for-streamers

./: .gitignore  .sesskey  main.py  pyproject.toml  requirements.txt
data/: utodos.db-shm  utodos.db-wal
